# rust-sqlx-axum-with-tests

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
deployment/: Dockerfile  docker-compose.test.yml  docker-compose.yml
migrations/: 1_user.sql
src/: api_test.rs  config.rs  error.rs  main.rs
src/api/: mapper.rs  mapper_test.rs  mod.rs  schema.rs  schema_test.rs  state.rs  user.rs
src/database/: db.rs  mod.rs  model.rs  queries.rs  tx.rs
src/docker/: mod.rs  postgres.rs
