[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Dotenv
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# Uuid
uuid = { version = "1.6.1", features = ["v4"] }

# Webserver dependency
axum = { version = "0.7.4", features = ["multipart"] }

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# SQL Database
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "migrate",
  "postgres",
] }

# Serialization of data
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.111"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }


[dev-dependencies]
testcontainers = "0.15.0"
axum-test = "14.3.0"
